--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -95,14 +95,18 @@
                                 <rect key="frame" x="8" y="40" width="375" height="48"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="SHOESTORE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e36-m7-N57">
-                                        <rect key="frame" x="0.0" y="0.0" width="285" height="48"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="293" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="km5-EG-rVa">
-                                        <rect key="frame" x="289" y="0.0" width="86" height="48"/>
+                                        <rect key="frame" x="297" y="0.0" width="78" height="48"/>
                                         <state key="normal" title="Button" image="filter"/>
+                                        <connections>
+                                            <action selector="filter:" destination="1Vf-zR-WzP" eventType="touchUpInside" id="TwS-JI-Ul1"/>
+                                            <action selector="filter:" destination="E9P-Md-6eo" eventType="touchUpInside" id="uTy-S0-G3j"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -116,7 +120,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellShoe" id="6Fx-G0-9lF" customClass="SearchResultViewCell" customModule="Shoestore" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="searchResultCell" id="6Fx-G0-9lF" customClass="SearchResultViewCell" customModule="Shoestore" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="144" height="236"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -164,11 +168,17 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="Brand" destination="hcn-Hk-i08" id="X1t-MR-nFy"/>
+                                            <outlet property="imagen" destination="wmC-Qo-P28" id="Xi2-8n-rzj"/>
                                             <outlet property="model" destination="OKT-2N-qls" id="vYf-bw-fSF"/>
                                             <outlet property="price" destination="ZUw-q0-soL" id="aSe-EN-CHe"/>
+                                            <segue destination="BYZ-38-t0r" kind="show" identifier="search_result_segue" id="R5O-dA-R2A"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="E9P-Md-6eo" id="BY5-Jw-tKM"/>
+                                    <outlet property="delegate" destination="E9P-Md-6eo" id="zRz-zV-pM8"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -184,10 +194,12 @@
                         <viewLayoutGuide key="safeArea" id="dnO-sa-Tlt"/>
                     </view>
                     <connections>
+                        <outlet property="collectionShoesFound" destination="IzR-8O-0nH" id="0MT-Mv-qQs"/>
                         <outlet property="shoeCollection" destination="IzR-8O-0nH" id="QXj-E4-in8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gm7-yN-7wR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="1Vf-zR-WzP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="429.60000000000002" y="35.532233883058474"/>
         </scene>
@@ -646,7 +658,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cxv-Dt-l3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1332" y="-1575"/>
+            <point key="canvasLocation" x="1148" y="46"/>
         </scene>
         <!--Log In View Controller-->
         <scene sceneID="thQ-6M-X9h">
@@ -900,7 +912,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="143" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="poi-48-03i">
-                                <rect key="frame" x="0.0" y="64" width="375" height="462"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="506"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellShop" rowHeight="143" id="33Y-RK-eTn" customClass="ShopCellTableViewCell" customModule="Shoestore" customModuleProvider="target">
@@ -991,17 +1003,18 @@
         </scene>
     </scenes>
     <resources>
-        <image name="filter" width="32" height="32"/>
-        <image name="home (1)" width="30" height="30"/>
-        <image name="man-user (1)" width="32" height="32"/>
-        <image name="musica-searcher" width="32" height="32"/>
+        <image name="filter" width="24" height="24"/>
+        <image name="home (1)" width="24" height="24"/>
+        <image name="man-user (1)" width="24" height="24"/>
+        <image name="musica-searcher" width="24" height="24"/>
         <image name="shoe" width="225" height="225"/>
         <image name="shoe1" width="800" height="600"/>
-        <image name="shopping-bag (1)" width="30" height="30"/>
-        <image name="shopping-bag-blue" width="30" height="30"/>
+        <image name="shopping-bag (1)" width="24" height="24"/>
+        <image name="shopping-bag-blue" width="23.736263275146484" height="23.736263275146484"/>
         <image name="user" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="R5O-dA-R2A"/>
         <segue reference="zBE-cK-IiA"/>
         <segue reference="jKl-xL-egi"/>
     </inferredMetricsTieBreakers>
