--- a/Shoestore/Resources/Main.storyboard
+++ b/Shoestore/Resources/Main.storyboard
@@ -95,13 +95,13 @@
                                 <rect key="frame" x="8" y="40" width="375" height="48"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="SHOESTORE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e36-m7-N57">
-                                        <rect key="frame" x="0.0" y="0.0" width="293" height="48"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="285" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="km5-EG-rVa">
-                                        <rect key="frame" x="297" y="0.0" width="78" height="48"/>
+                                        <rect key="frame" x="289" y="0.0" width="86" height="48"/>
                                         <state key="normal" title="Button" image="filter"/>
                                     </button>
                                 </subviews>
@@ -888,7 +888,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="2R9-9I-PKe">
-                                                    <rect key="frame" x="15" y="11" width="637" height="121"/>
+                                                    <rect key="frame" x="15" y="11" width="345" height="121"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMO-cB-1Zg">
                                                             <rect key="frame" x="0.0" y="0.0" width="100" height="121"/>
@@ -897,7 +897,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="47" translatesAutoresizingMaskIntoConstraints="NO" id="ayM-8O-djp">
-                                                            <rect key="frame" x="137" y="0.0" width="500" height="121"/>
+                                                            <rect key="frame" x="137" y="0.0" width="208" height="121"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ien-Li-ukT">
                                                                     <rect key="frame" x="0.0" y="0.0" width="155" height="20.5"/>
@@ -964,18 +964,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2596" y="121"/>
+            <point key="canvasLocation" x="-2798" y="130"/>
         </scene>
     </scenes>
     <resources>
-        <image name="filter" width="24" height="24"/>
-        <image name="home (1)" width="24" height="24"/>
-        <image name="man-user (1)" width="24" height="24"/>
-        <image name="musica-searcher" width="24" height="24"/>
+        <image name="filter" width="32" height="32"/>
+        <image name="home (1)" width="30" height="30"/>
+        <image name="man-user (1)" width="32" height="32"/>
+        <image name="musica-searcher" width="32" height="32"/>
         <image name="shoe" width="225" height="225"/>
         <image name="shoe1" width="800" height="600"/>
-        <image name="shopping-bag (1)" width="24" height="24"/>
-        <image name="shopping-bag-blue" width="23.736263275146484" height="23.736263275146484"/>
+        <image name="shopping-bag (1)" width="30" height="30"/>
+        <image name="shopping-bag-blue" width="30" height="30"/>
         <image name="user" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
